--- a/dev/examples/incompressible_elasticity/index.html
+++ b/dev/examples/incompressible_elasticity/index.html
@@ -10,7 +10,7 @@ using BlockArrays, SparseArrays, LinearAlgebra</code></pre><p>First we generate 
     addfaceset!(grid, &quot;clamped&quot;, x -&gt; norm(x[1]) ≈ 0.0);
     addfaceset!(grid, &quot;traction&quot;, x -&gt; norm(x[1]) ≈ 48.0);
     return grid
-end;</code></pre><pre><code class="language-none">create_cook_grid (generic function with 1 method)</code></pre><p>Next we define a function to set up our cell- and facevalues.</p><pre><code class="language-julia">function create_values(interpolation_u, interpolation_p)
+end;</code></pre><p>Next we define a function to set up our cell- and facevalues.</p><pre><code class="language-julia">function create_values(interpolation_u, interpolation_p)
     # quadrature rules
     qr      = QuadratureRule{2,RefTetrahedron}(3)
     face_qr = QuadratureRule{1,RefTetrahedron}(3)
@@ -26,20 +26,20 @@ end;</code></pre><pre><code class="language-none">create_cook_grid (generic func
     cellvalues_p = CellScalarValues(qr, interpolation_p, interpolation_geom)
 
     return cellvalues_u, cellvalues_p, facevalues_u
-end;</code></pre><pre><code class="language-none">create_values (generic function with 1 method)</code></pre><p>We create a DofHandler, with two fields, <code>:u</code> and <code>:p</code>, with possibly different interpolations</p><pre><code class="language-julia">function create_dofhandler(grid, ipu, ipp)
+end;</code></pre><p>We create a DofHandler, with two fields, <code>:u</code> and <code>:p</code>, with possibly different interpolations</p><pre><code class="language-julia">function create_dofhandler(grid, ipu, ipp)
     dh = DofHandler(grid)
     push!(dh, :u, 2, ipu) # displacement
     push!(dh, :p, 1, ipp) # pressure
     close!(dh)
     return dh
-end;</code></pre><pre><code class="language-none">create_dofhandler (generic function with 1 method)</code></pre><p>We also need to add Dirichlet boundary conditions on the <code>&quot;clamped&quot;</code> faceset. We specify a homogeneous Dirichlet bc on the displacement field, <code>:u</code>.</p><pre><code class="language-julia">function create_bc(dh)
+end;</code></pre><p>We also need to add Dirichlet boundary conditions on the <code>&quot;clamped&quot;</code> faceset. We specify a homogeneous Dirichlet bc on the displacement field, <code>:u</code>.</p><pre><code class="language-julia">function create_bc(dh)
     dbc = ConstraintHandler(dh)
     add!(dbc, Dirichlet(:u, getfaceset(dh.grid, &quot;clamped&quot;), (x,t) -&gt; zero(Vec{2}), [1,2]))
     close!(dbc)
     t = 0.0
     update!(dbc, t)
     return dbc
-end;</code></pre><pre><code class="language-none">create_bc (generic function with 1 method)</code></pre><p>The material is linear elastic, which is here specified by the shear and bulk moduli</p><pre><code class="language-julia">struct LinearElasticity{T}
+end;</code></pre><p>The material is linear elastic, which is here specified by the shear and bulk moduli</p><pre><code class="language-julia">struct LinearElasticity{T}
     G::T
     K::T
 end</code></pre><p>Now to the assembling of the stiffness matrix. This mixed formulation leads to a blocked element matrix. Since JuAFEM does not force us to use any particular matrix type we will use a <code>PseudoBlockArray</code> from <code>BlockArrays.jl</code>.</p><pre><code class="language-julia">function doassemble(cellvalues_u::CellVectorValues{dim}, cellvalues_p::CellScalarValues{dim},
@@ -67,7 +67,7 @@ end</code></pre><p>Now to the assembling of the stiffness matrix. This mixed for
     end
 
     return K, f
-end;</code></pre><pre><code class="language-none">doassemble (generic function with 1 method)</code></pre><p>The element routine integrates the local stiffness and force vector for all elements. Since the problem results in a symmetric matrix we choose to only assemble the lower part, and then symmetrize it after the loop over the quadrature points.</p><pre><code class="language-julia">function assemble_up!(Ke, fe, cell, cellvalues_u, cellvalues_p, facevalues_u, grid, mp, ɛdev, t)
+end;</code></pre><p>The element routine integrates the local stiffness and force vector for all elements. Since the problem results in a symmetric matrix we choose to only assemble the lower part, and then symmetrize it after the loop over the quadrature points.</p><pre><code class="language-julia">function assemble_up!(Ke, fe, cell, cellvalues_u, cellvalues_p, facevalues_u, grid, mp, ɛdev, t)
 
     n_basefuncs_u = getnbasefunctions(cellvalues_u)
     n_basefuncs_p = getnbasefunctions(cellvalues_p)
@@ -128,7 +128,7 @@ function symmetrize_lower!(K)
             K[i,j] = K[j,i]
         end
     end
-end;</code></pre><pre><code class="language-none">symmetrize_lower! (generic function with 1 method)</code></pre><p>Now we have constructed all the necessary components, we just need a function to put it all together.</p><pre><code class="language-julia">function solve(ν, interpolation_u, interpolation_p)
+end;</code></pre><p>Now we have constructed all the necessary components, we just need a function to put it all together.</p><pre><code class="language-julia">function solve(ν, interpolation_u, interpolation_p)
     # material
     Emod = 1.
     Gmod = Emod / 2(1 + ν)
@@ -161,27 +161,7 @@ end</code></pre><pre><code class="language-none">solve (generic function with 1 
 quadratic = Lagrange{2,RefTetrahedron,2}()
 
 u1 = solve(0.4999999, linear, linear)
-u2 = solve(0.4999999, quadratic, linear);</code></pre><pre><code class="language-none">23003-element Array{Float64,1}:
-   0.0                  
-   0.0                  
-   0.004015504943263817 
-   0.1720951997519353   
-   0.0                  
-   0.0                  
-   0.0018486260552494317
-   0.08957945095151262  
-   0.0011660357952675729
-   0.08619033662691412  
-   ⋮                    
- -13.616401217209388    
-  18.803255383887475    
- -14.036362309281673    
-  19.411363618042806    
- -13.827983829405156    
-  19.398580445177064    
- -13.801783748245487    
-  18.807938928808156    
-   0.015044393751639032 </code></pre><h2 id="incompressible_elasticity-plain-program-1">Plain Program<a class="docs-heading-anchor" href="#incompressible_elasticity-plain-program-1" title="Permalink"></a></h2><p>Below follows a version of the program without any comments. The file is also available here: <a href="../incompressible_elasticity.jl">incompressible_elasticity.jl</a></p><pre><code class="language-julia">using JuAFEM
+u2 = solve(0.4999999, quadratic, linear);</code></pre><h2 id="incompressible_elasticity-plain-program-1">Plain Program<a class="docs-heading-anchor" href="#incompressible_elasticity-plain-program-1" title="Permalink"></a></h2><p>Below follows a version of the program without any comments. The file is also available here: <a href="../incompressible_elasticity.jl">incompressible_elasticity.jl</a></p><pre><code class="language-julia">using JuAFEM
 using BlockArrays, SparseArrays, LinearAlgebra
 
 function create_cook_grid(nx, ny)
@@ -363,4 +343,4 @@ quadratic = Lagrange{2,RefTetrahedron,2}()
 u1 = solve(0.4999999, linear, linear)
 u2 = solve(0.4999999, quadratic, linear);
 
-# This file was generated using Literate.jl, https://github.com/fredrikekre/Literate.jl</code></pre><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../helmholtz/">« Helmholtz equation</a><a class="docs-footer-nextpage" href="../hyperelasticity/">Hyperelasticity »</a></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Wednesday 20 November 2019 22:24">Wednesday 20 November 2019</span>. Using Julia version 1.2.0.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+# This file was generated using Literate.jl, https://github.com/fredrikekre/Literate.jl</code></pre><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../helmholtz/">« Helmholtz equation</a><a class="docs-footer-nextpage" href="../hyperelasticity/">Hyperelasticity »</a></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Thursday 21 November 2019 14:01">Thursday 21 November 2019</span>. Using Julia version 1.2.0.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
