--- a/previews/PR297/examples/hyperelasticity/index.html
+++ b/previews/PR297/examples/hyperelasticity/index.html
@@ -191,24 +191,30 @@ end;</code></pre><p>Define a main function, with a loop for Newton iterations</p
 
     print_timer(title = &quot;Analysis with $(getncells(grid)) elements&quot;, linechars = :ascii)
     return u
-end</code></pre><pre class="documenter-example-output">solve (generic function with 1 method)</pre><p>Run the simulation</p><pre><code class="language-julia">u = solve();</code></pre><pre class="documenter-example-output">Solving: (thresh = 1e-08, value = 0.194526)[K
+end</code></pre><pre class="documenter-example-output">solve (generic function with 1 method)</pre><p>Run the simulation</p><pre><code class="language-julia">u = solve();</code></pre><pre class="documenter-example-output">Solving: (thresh = 1e-08, value = 0.76197)[K
+  iter:  0[K[A
+[K[ASolving: (thresh = 1e-08, value = 0.194526)[K
   iter:  1[K[A
+[K[ASolving: (thresh = 1e-08, value = 0.013799)[K
+  iter:  2[K[A
 [K[ASolving: (thresh = 1e-08, value = 0.000329859)[K
   iter:  3[K[A
-[K[ASolving: Time: 0:00:00 (6 iterations)[K
+[K[ASolving: (thresh = 1e-08, value = 1.92988e-07)[K
+  iter:  4[K[A
+[K[ASolving: Time: 0:00:22 (6 iterations)[K
   iter:  5[K
  ------------------------------------------------------------------------------
   Analysis with 6000 elements          Time                   Allocations
                                ----------------------   -----------------------
-       Tot / % measured:            694ms / 61.6%           79.8MiB / 16.9%
+       Tot / % measured:            23.2s / 98.9%           11.3GiB / 99.4%
 
  Section               ncalls     time   %tot     avg     alloc   %tot      avg
  ------------------------------------------------------------------------------
- assemble                   6    183ms  42.7%  30.4ms   8.52MiB  63.1%  1.42MiB
-   element assemble     36.0k    122ms  28.4%  3.38μs     0.00B  0.00%    0.00B
- linear solve (Iter...      5    164ms  38.4%  32.9ms    474KiB  3.43%  94.8KiB
- linear solve (Kryl...      5   43.6ms  10.2%  8.72ms    669KiB  4.84%   134KiB
- export                     1   37.0ms  8.66%  37.0ms   3.87MiB  28.6%  3.87MiB
+ assemble                   6    22.7s  99.1%   3.79s   11.2GiB  100%   1.87GiB
+   element assemble     36.0k    22.6s  98.7%   629μs   11.2GiB  100%    326KiB
+ linear solve (Iter...      5    139ms  0.60%  27.7ms    474KiB  0.00%  94.8KiB
+ linear solve (Kryl...      5   39.0ms  0.17%  7.80ms    669KiB  0.01%   134KiB
+ export                     1   38.3ms  0.17%  38.3ms   4.27MiB  0.04%  4.27MiB
  ------------------------------------------------------------------------------</pre><h2 id="Plain-Program"><a class="docs-heading-anchor" href="#Plain-Program">Plain Program</a><a id="Plain-Program-1"></a><a class="docs-heading-anchor-permalink" href="#Plain-Program" title="Permalink"></a></h2><p>Below follows a version of the program without any comments. The file is also available here: <a href="../hyperelasticity.jl">hyperelasticity.jl</a></p><pre><code class="language-julia">using JuAFEM, Tensors, TimerOutputs, ProgressMeter
 import KrylovMethods, IterativeSolvers
 
@@ -405,4 +411,4 @@ end
 
 u = solve();
 
-# This file was generated using Literate.jl, https://github.com/fredrikekre/Literate.jl</code></pre><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../incompressible_elasticity/">« Incompressible Elasticity</a><a class="docs-footer-nextpage" href="../threaded_assembly/">Threaded Assembly »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Thursday 15 October 2020 12:41">Thursday 15 October 2020</span>. Using Julia version 1.3.1.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+# This file was generated using Literate.jl, https://github.com/fredrikekre/Literate.jl</code></pre><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../incompressible_elasticity/">« Incompressible Elasticity</a><a class="docs-footer-nextpage" href="../threaded_assembly/">Threaded Assembly »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Thursday 15 October 2020 12:44">Thursday 15 October 2020</span>. Using Julia version 1.5.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
