--- a/dev/examples/hyperelasticity/index.html
+++ b/dev/examples/hyperelasticity/index.html
@@ -191,25 +191,31 @@ end;</code></pre><p>Define a main function, with a loop for Newton iterations</p
 
     print_timer(title = &quot;Analysis with $(getncells(grid)) elements&quot;, linechars = :ascii)
     return u
-end</code></pre><pre><code class="language-none">solve (generic function with 1 method)</code></pre><p>Run the simulation</p><pre><code class="language-julia">u = solve();</code></pre><pre><code class="language-none">Solving: (thresh = 1e-08, value = 0.194526)[K
-  iter:  1[A
+end</code></pre><pre class="documenter-example-output">solve (generic function with 1 method)</pre><p>Run the simulation</p><pre><code class="language-julia">u = solve();</code></pre><pre class="documenter-example-output">Solving: (thresh = 1e-08, value = 0.76197)[K
+  iter:  0[K[A
+[K[ASolving: (thresh = 1e-08, value = 0.194526)[K
+  iter:  1[K[A
+[K[ASolving: (thresh = 1e-08, value = 0.013799)[K
+  iter:  2[K[A
 [K[ASolving: (thresh = 1e-08, value = 0.000329859)[K
-  iter:  3[A
-[K[ASolving: Time: 0:00:00 (6 iterations)[K
-  iter:  5
+  iter:  3[K[A
+[K[ASolving: (thresh = 1e-08, value = 1.92988e-07)[K
+  iter:  4[K[A
+[K[ASolving: Time: 0:00:35 (6 iterations)[K
+  iter:  5[K
  ------------------------------------------------------------------------------
   Analysis with 6000 elements          Time                   Allocations
                                ----------------------   -----------------------
-       Tot / % measured:            741ms / 60.0%           79.7MiB / 16.8%
+       Tot / % measured:            36.0s / 99.1%           11.3GiB / 99.4%
 
  Section               ncalls     time   %tot     avg     alloc   %tot      avg
  ------------------------------------------------------------------------------
- assemble                   6    184ms  41.5%  30.7ms   8.52MiB  63.5%  1.42MiB
-   element assemble     36.0k    123ms  27.6%  3.41μs     0.00B  0.00%    0.00B
- linear solve (Iter...      5    176ms  39.6%  35.2ms    474KiB  3.45%  94.8KiB
- linear solve (Kryl...      5   47.4ms  10.7%  9.48ms    669KiB  4.87%   134KiB
- export                     1   36.6ms  8.25%  36.6ms   3.78MiB  28.2%  3.78MiB
- ------------------------------------------------------------------------------</code></pre><h2 id="Plain-Program"><a class="docs-heading-anchor" href="#Plain-Program">Plain Program</a><a id="Plain-Program-1"></a><a class="docs-heading-anchor-permalink" href="#Plain-Program" title="Permalink"></a></h2><p>Below follows a version of the program without any comments. The file is also available here: <a href="../hyperelasticity.jl">hyperelasticity.jl</a></p><pre><code class="language-julia">using JuAFEM, Tensors, TimerOutputs, ProgressMeter
+ assemble                   6    35.5s  99.3%   5.91s   11.2GiB  100%   1.87GiB
+   element assemble     36.0k    35.3s  98.9%   981μs   11.2GiB  100%    326KiB
+ linear solve (Iter...      5    167ms  0.47%  33.4ms    474KiB  0.00%  94.8KiB
+ linear solve (Kryl...      5   43.8ms  0.12%  8.76ms    669KiB  0.01%   134KiB
+ export                     1   42.0ms  0.12%  42.0ms   4.27MiB  0.04%  4.27MiB
+ ------------------------------------------------------------------------------</pre><h2 id="Plain-Program"><a class="docs-heading-anchor" href="#Plain-Program">Plain Program</a><a id="Plain-Program-1"></a><a class="docs-heading-anchor-permalink" href="#Plain-Program" title="Permalink"></a></h2><p>Below follows a version of the program without any comments. The file is also available here: <a href="../hyperelasticity.jl">hyperelasticity.jl</a></p><pre><code class="language-julia">using JuAFEM, Tensors, TimerOutputs, ProgressMeter
 import KrylovMethods, IterativeSolvers
 
 struct NeoHooke
@@ -405,4 +411,4 @@ end
 
 u = solve();
 
-# This file was generated using Literate.jl, https://github.com/fredrikekre/Literate.jl</code></pre><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../incompressible_elasticity/">« Incompressible Elasticity</a><a class="docs-footer-nextpage" href="../threaded_assembly/">Threaded Assembly »</a></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Saturday 23 May 2020 09:46">Saturday 23 May 2020</span>. Using Julia version 1.3.1.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+# This file was generated using Literate.jl, https://github.com/fredrikekre/Literate.jl</code></pre><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../incompressible_elasticity/">« Incompressible Elasticity</a><a class="docs-footer-nextpage" href="../threaded_assembly/">Threaded Assembly »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Thursday 15 October 2020 13:09">Thursday 15 October 2020</span>. Using Julia version 1.5.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
